[gd_scene load_steps=10 format=3 uid="uid://w7ajh8n7e0yk"]

[ext_resource type="Script" path="res://enemy/schnoz/schnoz.gd" id="1_ijp8e"]
[ext_resource type="Texture2D" uid="uid://bcp1d4sjws45m" path="res://assets/enemies/schnoz/pitchfork.png" id="2_deqkm"]
[ext_resource type="Texture2D" uid="uid://dl5jnehfyeby7" path="res://assets/enemies/schnoz/schnoz_hand.png" id="3_jelet"]
[ext_resource type="Script" path="res://enemy/schnoz/hitbox.gd" id="4_o41ub"]
[ext_resource type="AudioStream" uid="uid://bigdatnk5bx4e" path="res://assets/sounds/enemies/enemy_damage.wav" id="5_tfo0u"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nvpn0"]
load_path = "res://.godot/imported/schnoz.png-b82a72d84107f2a81a5e94089dd989c2.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mue5m"]
size = Vector2(34, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxd01"]
size = Vector2(66, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wkcg"]
size = Vector2(73, 74)

[node name="enemy" type="CharacterBody2D"]
position = Vector2(-2, 0)
script = ExtResource("1_ijp8e")

[node name="schnoz" type="Sprite2D" parent="."]
rotation = -1.57079
scale = Vector2(0.0161133, 0.0161133)
texture = SubResource("CompressedTexture2D_nvpn0")

[node name="weapon_hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="weapon_hitbox" type="CollisionShape2D" parent="weapon_hitbox"]
position = Vector2(87, 26)
shape = SubResource("RectangleShape2D_mue5m")

[node name="pitchfork" type="Sprite2D" parent="weapon_hitbox"]
position = Vector2(65, 26)
rotation = 1.57079
scale = Vector2(0.0140542, 0.030195)
texture = ExtResource("2_deqkm")

[node name="hand" type="Sprite2D" parent="."]
position = Vector2(30, 26)
scale = Vector2(0.0117187, 0.0117187)
texture = ExtResource("3_jelet")

[node name="body" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_hxd01")
debug_color = Color(0.344434, 0.484909, 1, 0.42)

[node name="hitbox" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 4
collision_mask = 8
script = ExtResource("4_o41ub")

[node name="hitbox" type="CollisionShape2D" parent="hitbox"]
visible = false
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_2wkcg")

[node name="invincibility_timer" type="Timer" parent="."]

[node name="hit_sound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_tfo0u")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_postprocessing = 1
avoidance_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.884314, 3.20069e-06, 1.15514e-06, 1)

[connection signal="area_entered" from="weapon_hitbox" to="." method="_on_weapon_hitbox_area_entered"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
